# pydra-dcm2bids

./: README.md  pyproject.toml
docs/: conf.py  index.rst
src/pydra/tasks/dcm2bids/: __init__.py
