[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pydra-dcm2bids"
version = "0.0.4"
description = "Pydra tasks for dcm2bids"
readme = "README.md"
requires-python = ">=3.8"
license = "Apache-2.0"
keywords = ["pydra", "dicom", "bids"]
authors = [
  { name = "Ghislain Vaillant", email = "ghislain.vaillant@inria.fr" },
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: Apache Software License",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Scientific/Engineering",
  "Topic :: Software Development :: Libraries",
]
dependencies = [
  "pydra >=0.21",
  "attrs >=22.1",
]

[project.optional-dependencies]
all = ["dcm2bids >=2.1,<3"]

[project.urls]
Documentation = "https://ghisvail.github.io/pydra-dcm2bids"
Issues = "https://github.com/ghisvail/pydra-dcm2bids/issues"
Source = "https://github.com/ghisvail/pydra-dcm2bids"

[tool.hatch.build.targets.wheel]
only-include = ["src/pydra/tasks/dcm2bids"]
sources = ["src"]

[tool.hatch.envs.default]
dependencies = ["pytest"]
[tool.hatch.envs.default.scripts]
test = "pytest {args}"

[[tool.hatch.envs.default.matrix]]
python = ["3.8", "3.9", "3.10", "3.11", "3.12"]

[tool.hatch.envs.docs]
template = "docs"
dependencies = [
  "pydata-sphinx-theme>=0.13",
  "sphinx <7",
  "sphinx-autobuild",
  "sphinx-pyproject",
]
[tool.hatch.envs.docs.scripts]
build = "sphinx-build -M {args:html} docs docs/_build"
serve = "sphinx-autobuild docs docs/_build/html {args}"

[tool.pytest.ini_options]
minversion = "6.0"
addopts = [
  "--doctest-modules",
  "--doctest-continue-on-failure",
  "--import-mode=importlib",
]
pythonpath = ["src"]
testpaths = ["src"]

[tool.ruff.lint]
ignore = ["FA", "INP001", "A001"]
